Fix the website name being cut off on small screens

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,6 +42,10 @@
 
 header {
     margin-bottom: 5px;
+
+    .brand-logo {
+        font-size: 1.5rem;
+    }
 }
 
 #loading-bar {
